gcc/testsuite/rust/rustc/ui/unsafe/unsafe-fn-called-from-safe.rs
unsafe fn f() { return; }

fn main() {
    f(); // { dg-error ".E0133." "" { target *-*-* } }
}

